--- a/js/Building_blocks/image_gallery/style.css
+++ b/js/Building_blocks/image_gallery/style.css
@@ -41,3 +41,11 @@ button {
   float: left;
   cursor: pointer;
 }
+
+.overlay.light {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.dark {
+  background-color: rgba(0, 0, 0, 0);
+}
